Fix link to current "Evolving Java-based APIs"
Wiki is read only with multiple warnings being what one sees before
figuring the redirects.